--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
     <p>or send me a message here </p>
     <form class="" action="mailto:shashwathbhaskarwork@gmail.com" method="post" enctype="text/plain"> <!-- this is a form-->
       <label>Your name </label>
-      <input type="text" name="name"><br> <!-- a form creates pop ups for our use we can use it to send our selves messages-->
+      <input type="text" name="name"><br> <!-- a form creates pop ups for our use we can use it to send our selves messages to assigned emails-->
       <label>Your email</label>
       <input type="email" name="email"><br>
       <label>Your message </label><br>
