--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <!-- this is the head of the html web page -->
-  <img src="pic-modified.png" alt="no img found" width="10%" height="10%"> <!-- this is the img elemet used to import elements -->
+  <img class="circular"src="pic-modified.png" alt="no img found" width="10%" height="10%"> <!-- this is the img elemet used to import elements -->
   <meta charset="utf-8"> <!-- this is metadata or the information about the data-->
   <title>Shashwath's Personal website</title>
+  <!-- this is the style or CSS part of the webpage which takes care of the appearence of the web page -->
+  <link rel="stylesheet" href="css/styles.css"> <!-- link points to the css file in the folder for styling of the page-->
 </head>
 
 <body>
@@ -33,19 +35,6 @@
           <li>CSS</li>
           <li>Javascript</li>
         </strong></ol>
-  </ul>
-  <hr>
-  <h3>My Hobbies </h3>
-  <ul>
-    <li>Playing physical games like</li>
-    <ul>
-      <li>Cricket</li>
-      <li>Football</li>
-      <li>Badminton</li>
-      <li>Valley Ball</li>
-    </ul>
-    <li>Coding</li>
-    <li>Video Games</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
@@ -107,8 +96,8 @@
     </tbody>
   </table>
   <hr>
+  <h4><a href="hobbies.html">My hobbies</a></h4>
   <h4><a href="contacts.html">Contact me</a></h4>
-
 </body>
 
 </html>
