--- a/contacts.html
+++ b/contacts.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact details</title>
-  </head>
-  <body>
-    <ul>
-      <li><a href="https://in.linkedin.com/in/shashwath-bhaskar-a56597213">Lindkin profile</a></li>
-      <li>shashwathbhaskarwork@gmail.com</li>
-      <li>fictional address</li>
-      <li>ph no - 88739118839</li>
-    </ul>
-    <p>or send me a message here </p>
-    <form class="" action="mailto:shashwathbhaskarwork@gmail.com" method="post" enctype="text/plain"> <!-- this is a form-->
-      <label>Your name </label>
-      <input type="text" name="name"><br> <!-- a form creates pop ups for our use we can use it to send our selves messages to assigned emails-->
-      <label>Your email</label>
-      <input type="email" name="email"><br>
-      <label>Your message </label><br>
-      <textarea name="message" rows="8" cols="10"></textarea><br>
-      <input type="submit" name="">
 
-    </form>
+<head>
+  <meta charset="utf-8">
+  <title>Contact details</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
-  </body>
+<body>
+
+  <h1>Contact Details</h1>
+  <hr>
+  <li><a href="https://in.linkedin.com/in/shashwath-bhaskar-a56597213">Lindkin profile</a></li>
+  <br>
+  <li>shashwathbhaskarwork@gmail.com</li>
+  <br>
+  <li>fictional address</li>
+  <br>
+  <li>ph no - 88739118839</li>
+  <br>
+
+  <hr>
+  </noscript>
+  <p>or send me a message here </p>
+  <form class="" action="mailto:shashwathbhaskarwork@gmail.com" method="post" enctype="text/plain">
+    <!-- this is a form-->
+    <label>Your name </label>
+    <input type="text" name="name"><br> <!-- a form creates pop ups for our use we can use it to send our selves messages-->
+    <label>Your email</label>
+    <input type="email" name="email"><br>
+    <label>Your message </label><br>
+    <textarea name="message" rows="8" cols="10"></textarea><br>
+    <input type="submit" name="">
+
+  </form>
+
+</body>
+
 </html>
